--- a/.cproject
+++ b/.cproject
@@ -37,8 +37,21 @@
 </storageModule>
 <storageModule moduleId="scannerConfiguration"/>
 <storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
-<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+
 <storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
+<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
+<buildTargets>
+<target name="copy lib" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+<buildCommand>scp</buildCommand>
+<buildArguments>/home/joachim/workspace/vdr-screenshot/libvdr-screenshot.so</buildArguments>
+<buildTarget>root@vdr:/usr/local/lib/vdr/libvdr-screenshot.so.1.6.0</buildTarget>
+<stopOnError>true</stopOnError>
+<useDefaultCommand>false</useDefaultCommand>
+<runAllBuilders>true</runAllBuilders>
+</target>
+</buildTargets>
+</storageModule>
 </cconfiguration>
 </storageModule>
 <storageModule moduleId="cdtBuildSystem" version="4.0.0">
