--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,3 @@
-#Sat Mar 14 18:34:40 CET 2009
+#Wed Apr 22 14:45:29 CEST 2009
 eclipse.preferences.version=1
-environment/project/preference.org.eclipse.cdt.managedbuilder.core.configurationDataProvider.586203391=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment append\="true" appendContributed\="true">\n<variable delimiter\=";" name\="INCLUDES" operation\="append" value\="-I../"/>\n<variable delimiter\=";" name\="CXX" operation\="append" value\="g++-4.2"/>\n</environment>\n
+environment/project/preference.org.eclipse.cdt.managedbuilder.core.configurationDataProvider.586203391=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment append\="true" appendContributed\="true">\n<variable delimiter\=";" name\="CXX" operation\="append" value\="g++-4.2"/>\n<variable delimiter\=";" name\="VDRDIR" operation\="append" value\="${workspace_loc}/vdr"/>\n</environment>\n
