--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>vdr-screenshot</name>
 	<comment></comment>
 	<projects>
+		<project>vdr-core-majo</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
